# src/functions/api/getCourseRoundStudents.ts
@@ -7,19 +7,37 @@ import {
 import { Database } from "../utils";
 
 export default async function handler<T extends APICourseRoundStudentList>(request: HttpRequest, context: InvocationContext, db: Database): Promise<HttpResponseInit> {
+  let offset = parseInt(request.query.get("offset") ?? "0");
+  if (offset < 0) offset = 0;
+  let limit = parseInt(request.query.get("limit") ?? "30");
+  if (limit > 30) limit = 30;
+  
   const { id } = request.params;
-  const outp: APICourseRoundStudentList = await db.queryByProperty('ladokCourseRoundId', id, 'StudentParticipation');
-  await db.close();
+
+  let outp: APICourseRoundStudentList = [];
+  let total;
+  try {
+    total = await db.countByPropertyQuery('ladokCourseRoundId', id, 'StudentParticipation');
+    // TODO: Add type TStudentParticiaionEntity
+    outp = await db.queryByProperty('ladokCourseRoundId', id, 'StudentParticipation', { offset, limit });
+  } finally {
+    await db.close();
+  }
 
   if (!outp) {
     return {
       status: 404,
-      body: JSON.stringify({ error: 'Not found' })
+      jsonBody: { error: 'Not found' }
     }
   }
   
   return {
     status: 200,
-    body: JSON.stringify(outp)
+    jsonBody: outp,
+    headers: {
+      "Pagination-Total-Count": total.toString(),
+      "Pagination-Page-Offset": offset.toString(),
+      "Pagination-Page-Limit": limit.toString()
+    }
   }
 };
